page alignment fixes

--- a/src/Minesweeper/Minesweeper.css
+++ b/src/Minesweeper/Minesweeper.css
@@ -26,7 +26,8 @@
 }
 
 .minesweeper-page {
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
